--- a/TranslateFun/MainWindow.xaml
+++ b/TranslateFun/MainWindow.xaml
@@ -14,7 +14,7 @@
         </Grid.ColumnDefinitions>
 
         <TextBox Grid.Column="0" Text="{Binding Path=TextToTranslate}" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="1" Width="20" Click="TranslateButtonClick">-></Button>
+        <Button Grid.Column="1" Width="20" Click="TranslateButtonClick" IsEnabled="{Binding Path=TranslateButtonEnabled}">-></Button>
         <TextBox Grid.Column="2" Text="{Binding Path=Result}" IsReadOnly="True" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
     </Grid>
 </Window>
