--- a/TranslateFun/MainWindow.xaml
+++ b/TranslateFun/MainWindow.xaml
@@ -6,6 +6,13 @@
         xmlns:local="clr-namespace:TranslateFun"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+
+    <Window.Resources>
+        <Style TargetType="TextBox">
+            <Setter Property="Padding" Value="5" />
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
